<resources>
    <string name="app_name">ArithmetiQuest</string>
    <string name="question_mark">\?</string>
    <string name="welcome_title">ArithmetiQuest</string>
    <string name="howToPlay_title">How to Play</string>
    <string name="game_rule">Three figures are presented, two at the bottom and one at the top. Two of them contain numbers. The objective is to insert the missing number to ensure that the sum of the numbers in the two bottom figures equals the number in the top figure</string>
    <string name="goal">Enhance understanding of the composition of studied numbers and develop the ability to represent numbers as the sum of two addends through visual methods
    </string>
    <string name="example">In the top circle, there is the number 10, and in one of the bottom circles, there is a question mark, while in the other, there is the number 3. Therefore, the missing number represented by the question mark should be 7, as 3 + 7 equals 10. When calculating the result, the number of correct answers and the percentage of correct answers are taken into account. The game has a time limit
    </string>
    <string name="button_understand">PLAY</string>
    <string name="button_how_to_play">How to Play</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="choose_level_title">Select a Level</string>
    <string name="easy_level">EASY</string>
    <string name="normal_level">Medium</string>
    <string name="hard_level">HARD</string>
    <string name="test_level">Тестовый</string>
    <string name="game_over">Game Over</string>
    <string name="score_answers">Your score: %s</string>
    <string name="score_percentage">Percentage of correct answers: %s</string>
    <string name="retry">Play Again</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="required_percentage">Required percentage of correct answers: %s</string>
    <string name="required_score">Required number of correct answers %s</string>
    <string name="progress_answers0">Correct answers 0 (minimum %s)</string>
    <string name="progress_answers">Correct answers %s (minimum %s)</string>
    <string name="games_rules_title">Games Rules</string>
    <string name="goal_title">Purpose</string>
    <string name="example_title">Example</string>
    <string name="buttontoclosedialog">buttonToCloseDialog</string>
</resources>
