<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".presentation.WelcomeActivity">

        <View
            android:id="@+id/overlayView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:clickable="false"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/welcomeLogo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/welcomelogo"
            app:lottie_speed="1.3" />

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#ff994c"
            android:fontFamily="casual"
            android:letterSpacing="0.1"
            android:padding="20dp"
            android:text="@string/welcome_title"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeLogo" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="50dp"
            android:backgroundTint="#9c73f7"
            android:fontFamily="sans-serif-black"
            android:text="@string/button_understand"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />


        <Button
            android:id="@+id/buttonHowToPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#9c73f7"
            android:fontFamily="sans-serif-black"
            android:text="@string/button_how_to_play"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonStart" />




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/howToPlayDialogWindow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/rounded_background_how_to_play_dialog"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/howToPlayLogo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/howtoplaylogo"
                app:lottie_speed="1" />

            <ImageView
                android:id="@+id/buttonToCloseDialog"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/closeicon"
                android:contentDescription="@string/buttontoclosedialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@+id/howToPlayLogo">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="#009d90"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/goal_title"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#f77e1b"
                            android:padding="10dp"
                            android:fontFamily="casual"
                            android:text="@string/goal"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="#009d90"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/games_rules_title"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#f77e1b"
                            android:padding="10dp"
                            android:fontFamily="casual"
                            android:text="@string/game_rule"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_background_example_container">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="#009d90"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/example_title"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_background_example"
                            android:padding="10dp"
                            android:fontFamily="casual"
                            android:text="@string/example"
                            android:textColor="@color/white" />

                    </LinearLayout>


                </LinearLayout>
            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>